<resources>
    <string name="app_name">CodeLabApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktail_category"><b>Cocktail Category:</b> </string>
    <string name="cocktail_glass"><b>Cocktail glass:</b></string>
    <string name="first_ingredient"><b>Ingredients:</b></string>
    <string name="instruction"><b>Instruction:</b></string>
    <string name="strdrink"><b>StrDrink:</b></string>
    <string name="alcoholic"><b>Alcoholic:</b> %1$s</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connection_lost">Connection lost</string>
    <string name="list_of_cocktails">List of Cocktails</string>
    <string name="cocktail">Cocktail</string>
    <string name="db">Db</string>
    <string name="are_you_sure_you_want_to_quit_the_app">Are you sure you want to quit the App?</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
</resources>