<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_cocktail_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/cocktail_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_cocktail_glass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/cocktail_glass"
                app:layout_constraintStart_toStartOf="@+id/tv_cocktail_category"
                app:layout_constraintTop_toBottomOf="@+id/tv_cocktail_category" />

            <TextView
                android:id="@+id/tv_cocktail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cocktail Image:"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/tv_cocktail_glass"
                app:layout_constraintTop_toBottomOf="@+id/tv_cocktail_glass" />

            <ImageView
                android:id="@+id/iv_cocktail_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cocktail_image"
                app:srcCompat="@drawable/paugba" />

            <TextView
                android:id="@+id/tv_first_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/first_ingredient"
                app:layout_constraintStart_toStartOf="@+id/iv_cocktail_image"
                app:layout_constraintTop_toBottomOf="@+id/iv_cocktail_image" />


            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/instruction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_ingredient" />

            <TextView
                android:id="@+id/tv_strDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/strdrink"
                app:layout_constraintStart_toStartOf="@+id/tv_instruction"
                app:layout_constraintTop_toBottomOf="@+id/tv_instruction" />

            <TextView
                android:id="@+id/tv_alcoholic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/alcoholic"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toStartOf="@+id/tv_strDrink"
                app:layout_constraintTop_toBottomOf="@+id/tv_strDrink" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>