<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CocktailFragment">



    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="12dp"
        android:text="@string/list_of_cocktails"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="83dp" />




    <androidx.appcompat.widget.SearchView
        android:id="@+id/edt_editSearchBox"
        style="@style/Widget.AppCompat.SearchView.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/search_drawable"
        android:focusable="true"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_headline"
        app:layout_constraintTop_toBottomOf="@+id/tv_headline"
        app:queryHint="Search Cocktail" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cocktail_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_editSearchBox"
        app:layout_constraintVertical_bias="0.3" />



    <ImageView
        android:id="@+id/connection_lost_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        android:contentDescription="@string/no_internet_connection"
        android:src="@drawable/ic_baseline_wifi_off_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />
    <TextView
        android:id="@+id/connection_lost_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_lost"
        android:visibility="invisible"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/connection_lost_image"
        app:layout_constraintStart_toStartOf="@+id/connection_lost_image"
        app:layout_constraintTop_toBottomOf="@+id/connection_lost_image" />



</androidx.constraintlayout.widget.ConstraintLayout>